hash prev and id

--- a/config.json
+++ b/config.json
@@ -1,5 +1,11 @@
 {
     "host": "127.0.0.1",
-    "port": "6660"
-}
+    "port": "6661",
+    "pairs": {
+      "0": {
+        "host": "127.0.0.1",
+        "port": "6660"
+      }
+    }
+  }
   
