--- a/config.json
+++ b/config.json
@@ -1,11 +1,4 @@
 {
-    "host": "127.0.0.1",
-    "port": "6661",
-    "pairs": {
-      "0": {
-        "host": "127.0.0.1",
-        "port": "6660"
-      }
-    }
-  }
-  
+  "host": "192.168.1.105",
+  "port": 6660
+}
